# sashimi

./: .gitignore  .travis.yml  Cargo.toml  README.md  example_game.pgn  test.sh
arena/: Cargo.toml
arena/src/: lib.rs
engine/: Cargo.toml  feature_list.txt  model  policy_feature_list.txt  policy_model
engine/src/: args.rs  build.rs  evaluation.rs  features.rs  features_common.rs  import.rs  lib.rs  main.rs  model.rs  policy_features.rs  search.rs  state.rs  uci.rs
linear_regression/: Cargo.toml
linear_regression/src/: lib.rs  tests.rs
mcts/: Cargo.toml
mcts/examples/: counting_game.rs
mcts/src/: atomics.rs  lib.rs  search_tree.rs  tree_policy.rs
selfplay/: Cargo.toml
selfplay/src/: config.rs  import.rs  iternum.rs  main.rs  playgame.rs  self_play_state.rs
uci_wrapper/: Cargo.toml
uci_wrapper/src/: args.rs  main.rs  training.rs  uci.rs
