[package]
authors = ["Jacob Jackson <jacobbfjackson@gmail.com>"]
build = "src/build.rs"
name = "engine"
version = "0.2.0"

[build-dependencies]
slurp = "*"

[dependencies]
mcts = { path = "../mcts" }
chess = "*"
float-ord = "*"
rand = "*"
shakmaty = "0.5"
smallvec = "*"
log = "*"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
