[package]
name = "selfplay"
version = "0.2.0"
authors = ["Jacob Jackson <jacobbfjackson@gmail.com>"]

[dependencies]
engine = { path = "../engine" }
mcts = { path = "../mcts" }
log = "*"
simplelog = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rayon = "^1.0"
chess = "*"
slurp = "*"
structopt = "0.2"
rand = "0.5.0-pre.1"

[[bin]]
name = "selfplay"
path = "src/main.rs"
