[package]
name = "uci_wrapper"
version = "0.2.0"
authors = ["Jacob Jackson <jacobbfjackson@gmail.com>"]

[dependencies]
engine = { path = "../engine" }
argparse = "*"
log = "*"
madvise = "*"
memmap = "*"
num_cpus = "*"
pgn-reader = "0.4.0"
simplelog = "*"
slurp = "*"

[[bin]]
name = "sashimi"
path = "src/main.rs"
